--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.287.0",
     "next": "^13.4.19",
     "nookies": "^2.5.2",
